# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.208 2005/12/11 21:03:38 agaffney Exp $

*GLI-gtkfe-0.3 (27 Oct 2005)

  11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  change call to .get_active_text()
  set arch properly in CF

  4 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added StartupServices screen
  fixed some typos introduced by the CC-to-IP networking code
  only add interface to IP if type is 'dhcp' or 'static'
  StartupServices screen now works
  move StartupServices after ExtraPackages
  code cleanup for StartupServices
  Bootloader screen allows for selection of boot_device if bootloader in MBR
  Bootloader screen allows user to specify extra kernel args
  bootsplash option on Kernel screen
  rewrote Kernel.py to be more modular and added hardened- and grsec-sources

  3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added CC networking pre-loading to Networking screen

  1 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added DHCP options to CC screen

  28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  rename Client Config screen to Pre-install Config
  list currently loaded modules on the right side of the client config screen
  add scrollbar to module list
  check 'Network already setup' if gentoo.org can be pinged
  clean up loaded module list

  27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  wrap text in log and output view
  add vertical scrollbars
  scroll with scrollbars instead of textbuffer iter crap
  scrollbars suck...autoscrolling the old way
  cleanup (still commented) autoscroll code with vadjustment

  26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  move partition debug button to top row so it's always visible
  add bit about installer version to failure message
  spread out filesystem types in key

  25 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  show mountpoint in partition summary on main screen