@@ -210,30 +210,41 @@ class Panel(GLIScreen.GLIScreen):
 		tmplabel = gtk.Label("   ")
 		tmptable.attach(tmplabel, 0, 1, 8, 9)
 		tmplabel = gtk.Label()
-		tmplabel.set_markup("<b><u>" + _("Kernel modules:") + "</u></b>")
+#		tmplabel.set_markup("<b><u>" + _("Kernel modules:") + "</u></b>")
+		tmplabel.set_markup("<b><u>" + _("Other:") + "</u></b>")
 		tmplabel.set_alignment(0.0, 0.5)
 		tmptable.attach(tmplabel, 0, 2, 9, 10)
-		tmplabel = gtk.Label(_("Modules:"))
+		tmplabel = gtk.Label(_("Kernel modules:"))
 		tmplabel.set_alignment(0.0, 0.5)
 		tmptable.attach(tmplabel, 0, 1, 10, 11)
 		self.modules_entry = gtk.Entry()
 		self.modules_entry.set_width_chars(25)
 		tmptable.attach(self.modules_entry, 1, 2, 10, 11)
-		tmplabel = gtk.Label("   ")
-		tmptable.attach(tmplabel, 0, 1, 11, 12)
-		tmplabel = gtk.Label()
-		tmplabel.set_markup("<b><u>" + _("Debug:") + "</u></b>")
-		tmplabel.set_alignment(0.0, 0.5)
-		tmptable.attach(tmplabel, 0, 2, 12, 13)
+#		tmplabel = gtk.Label("   ")
+#		tmptable.attach(tmplabel, 0, 1, 11, 12)
+#		tmplabel = gtk.Label()
+#		tmplabel.set_markup("<b><u>" + _("Debug:") + "</u></b>")
+#		tmplabel.set_alignment(0.0, 0.5)
+#		tmptable.attach(tmplabel, 0, 2, 12, 13)
 		tmplabel = gtk.Label(_("Verbose logging:"))
 		tmplabel.set_alignment(0.0, 0.5)
-		tmptable.attach(tmplabel, 0, 1, 13, 14)
+		tmptable.attach(tmplabel, 0, 1, 11, 12)
 		tmphbox = gtk.HBox(False, 0)
 		self.verbose_no_radio = gtk.RadioButton(label=_("No"))
 		tmphbox.pack_start(self.verbose_no_radio, expand=False, fill=False, padding=0)
 		self.verbose_yes_radio = gtk.RadioButton(group=self.verbose_no_radio, label=_("Yes"))
 		tmphbox.pack_start(self.verbose_yes_radio, expand=False, fill=False, padding=15)
-		tmptable.attach(tmphbox, 1, 2, 13, 14)
+		tmptable.attach(tmphbox, 1, 2, 11, 12)
+		tmplabel = gtk.Label(_("Install mode:"))
+		tmplabel.set_alignment(0.0, 0.5)
+		tmptable.attach(tmplabel, 0, 1, 12, 13)
+		self.install_mode_combo = gtk.combo_box_new_text()
+		self._install_modes = ( "Normal", "Chroot" )
+		for install_mode in self._install_modes:
+			self.install_mode_combo.append_text(install_mode)
+		self.install_mode_combo.set_active(0)
+		tmptable.attach(self.install_mode_combo, 1, 2, 12, 13)
+
 		hbox.pack_start(tmptable, expand=False, fill=False, padding=0)
 
 		# Currently loaded modules
@@ -383,6 +394,7 @@ class Panel(GLIScreen.GLIScreen):
 		self.controller.client_profile.set_verbose(None, self.verbose_yes_radio.get_active(), None)
 		arch = GLIUtility.spawn(r"uname -m | sed -e 's:i[3-6]86:x86:' -e 's:x86_64:amd64:' -e 's:parisc:hppa:'", return_output=True)[1].strip()
 		self.controller.client_profile.set_architecture_template(None, arch, None)
+		self.controller.client_profile.set_install_mode(None, self._install_modes[self.install_mode_combo.get_active()].lower(), None)
 
 		self.controller.cc.set_configuration(self.controller.client_profile)
 		self.controller.cc.start_pre_install()
