@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.208 2005/12/11 21:03:38 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.209 2005/12/19 13:10:34 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  19 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  add install_mode support to Misc tab of CC screen
 
   11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   change call to .get_active_text()
